--- a/WelFakeBert.ipynb
+++ b/WelFakeBert.ipynb
@@ -7,7 +7,7 @@
       "gpuType": "V100",
       "machine_shape": "hm",
       "mount_file_id": "1Qh3hRLJu8LSoy6TiQ6RLFMLQ6_xS3Jn3",
-      "authorship_tag": "ABX9TyNNaDKBnWiirtafn0J0tnsy",
+      "authorship_tag": "ABX9TyO+3qVqC0iEqH/a3IY5ZdLq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +29,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/viferraro/FakeNewsBert/blob/main/WelFakeBert.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Comando que instala a biblioteca transformers"
+      ],
+      "metadata": {
+        "id": "dc4VxKmPIT7D"
+      }
     },
     {
       "cell_type": "code",
@@ -80,6 +89,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Comando que instala a biblioteca openpyxl, que é usada para ler e escrever arquivos do Excel."
+      ],
+      "metadata": {
+        "id": "wq0fkCUqSDF9"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!pip install openpyxl\n"
@@ -102,6 +120,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Importação das bibliotecas necessárias"
+      ],
+      "metadata": {
+        "id": "6Z9BpXBsIO18"
+      }
     },
     {
       "cell_type": "code",
@@ -132,6 +159,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Importa o módulo drive do pacote colab da biblioteca google. Esse módulo é usado para montar o Google Drive como um sistema de arquivos no Google Colab"
+      ],
+      "metadata": {
+        "id": "asI9pK4jTV5N"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from google.colab import drive\n",
@@ -156,6 +192,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Comando que define a variável SEED como 10. Essa variável é usada para definir a semente do gerador de números aleatórios."
+      ],
+      "metadata": {
+        "id": "DrUTChi2Vnpm"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "SEED = 10"
@@ -167,6 +212,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Lê trata o arquivo Excel com o conjunto de dados"
+      ],
+      "metadata": {
+        "id": "mjAqQkgnV553"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "df = pd.read_excel('/content/drive/MyDrive/BDs/WELFake_Dataset.xlsx')\n",
@@ -174,7 +228,7 @@
         "df['text'] = df['title'] + ' ' + df['text']\n",
         "X = df['text']\n",
         "y = df['label']\n",
-        "MAX_LEN = 100"
+        "MAX_LEN = 500"
       ],
       "metadata": {
         "id": "5w7YNRqMTlv8"
@@ -183,20 +237,29 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Cria uma função que retorna o número de palavras e cria os gráficos"
+      ],
+      "metadata": {
+        "id": "s_m04nUiV-2e"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "df['num_words'] = df['text'].apply(lambda x: len(x.split()))\n",
         "plt.figure(figsize = (8,5))\n",
         "sns.countplot(x = df['label'], palette = 'Set1', alpha = 0.8)\n",
-        "plt.title('Distribution of Fake - 0 /Real - 1 News')\n",
+        "plt.title('Distribuição de Notícias Fakes(0) / Reais(1)')\n",
         "plt.figure(figsize = (14,5))\n",
         "sns.histplot(df['num_words'], bins = range(1, 3000, 50), palette = 'Set1', alpha = 0.8)\n",
-        "plt.title('Distribution of the News Words count')"
+        "plt.title('Distribuição da contagem de palavras')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 982
+          "height": 1000
         },
         "id": "ohM2DyHWtPyt",
         "outputId": "c08e2d0c-854a-4916-8106-cc55abb90451"
@@ -244,6 +307,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Define a função que cria e retorna o modelo (BERT)"
+      ],
+      "metadata": {
+        "id": "dTwS9e76YCfB"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "def get_model():\n",
@@ -269,6 +341,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Define uma função que pré-processa o texto usando o tokenizer BERT"
+      ],
+      "metadata": {
+        "id": "K_N9wOLkYMnv"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "def get_tokens(X):\n",
@@ -289,7 +370,7 @@
         "bert = TFBertModel.from_pretrained('bert-base-uncased')\n",
         "model = get_model()\n",
         "model.summary()\n",
-        "tf.keras.utils.plot_model(model)"
+        "tf.keras.utils.plot_model(model)     #cria um diagrama mostrando a arquitetura do modelo"
       ],
       "metadata": {
         "id": "Ut3mR4SKUhut",
@@ -367,6 +448,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Divide os dados em conjuntos de treinamento e teste e realiza o treinamento em 10 épocas"
+      ],
+      "metadata": {
+        "id": "Z0ra26otYm1P"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "X_train, X_test, y_train, y_test = train_test_split(X, y, stratify=y, test_size=0.2, random_state=SEED)\n",
@@ -416,6 +506,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Cria gráficos que que mostram o desempenho do modelo"
+      ],
+      "metadata": {
+        "id": "VhEzwDxUakyo"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "def plot_graphs(history, metric):\n",
@@ -433,7 +532,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 454
+          "height": 544
         },
         "id": "PUl91tzqt6g-",
         "outputId": "2cff0ee7-bf96-4a78-ef3c-f8a3d307ddbe"
@@ -451,6 +550,24 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " Usa o modelo treinado para fazer previsões nos dados de teste"
+      ],
+      "metadata": {
+        "id": "jVm2Mp32azKl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "Ag9aVkVtayfn"
+      }
     },
     {
       "cell_type": "code",
@@ -474,6 +591,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Imprime um resumo mostrando o desempenho do modelo nos dados do teste"
+      ],
+      "metadata": {
+        "id": "ydTpTTqdax8H"
+      }
     },
     {
       "cell_type": "code",
@@ -505,6 +631,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Cria um diagrama mostrando a matriz de confusão"
+      ],
+      "metadata": {
+        "id": "lP4m_3z4bJvR"
+      }
     },
     {
       "cell_type": "code",
@@ -546,6 +681,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Salva o modelo e os pesos"
+      ],
+      "metadata": {
+        "id": "JuM807Xwbctw"
+      }
     },
     {
       "cell_type": "code",
