--- a/WelFakeBert.ipynb
+++ b/WelFakeBert.ipynb
@@ -7,7 +7,7 @@
       "gpuType": "A100",
       "machine_shape": "hm",
       "mount_file_id": "1Qh3hRLJu8LSoy6TiQ6RLFMLQ6_xS3Jn3",
-      "authorship_tag": "ABX9TyMrcApf47cNJ5HlSCpCC+lq",
+      "authorship_tag": "ABX9TyMhDAk1fNGvP9kEd1l3AoOi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1846,7 +1846,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 11,
       "metadata": {
         "id": "qdEmQVmLKWUK"
       },
@@ -1856,20 +1856,15 @@
         "import pandas as pd\n",
         "import seaborn as sns\n",
         "import tensorflow as tf\n",
-        "import keras\n",
         "import matplotlib.pyplot as plt\n",
         "import gc\n",
-        "from sklearn.model_selection import train_test_split\n",
         "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
-        "from keras.preprocessing.text import Tokenizer\n",
-        "from keras.models import Sequential\n",
-        "from keras.models import Model, Sequential\n",
+        "from keras.models import Model\n",
         "from keras.layers import Input, Dense, Dropout, Embedding\n",
-        "from sklearn.model_selection import train_test_split\n",
         "from keras.preprocessing.text import Tokenizer\n",
         "from keras.callbacks import EarlyStopping\n",
-        "from sklearn.model_selection import train_test_split,StratifiedKFold\n",
         "from sklearn.metrics import confusion_matrix, classification_report, f1_score\n",
+        "from sklearn.model_selection import train_test_split\n",
         "from tensorflow.python.client import device_lib\n",
         "from keras.optimizers import Adam\n",
         "from keras.regularizers import l1, l2\n",
